# Rust-Esercizi

Esercizio1/src/lib/: anagrammi.rs
Esercizio2_4/: Cargo.toml
Esercizio2_4/src/lib/: lib.rs  razionale.rs
Esercizio2_4/tests/: test.rs
Esercizio3/: Cargo.toml
Esercizio3/src/: main.rs  player_conf.rs
Esercizio5/: Cargo.toml
Esercizio5/src/lib/: conto_bancario.rs  lib.rs
Esercizio5/tests/: test.rs
Esercizio6/: Cargo.toml
Esercizio6/Tests/: test.rs
Esercizio6/src/lib/: double_linked_list.rs
Esercizio7/: Cargo.toml
Esercizio7/src/lib/: double_linked_list.rs
Esercizio7/tests/: test.rs
Esercizio8/: Cargo.toml
Esercizio8/src/lib/: count_vocali.rs  lib.rs
Esercizio8/tests/: test.rs
Esercizio9/: Cargo.toml
Esercizio9/src/: main.rs
