[package]
name = "Esercizio8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[lib]
name = "Esercizio8"
path = "../../Rust-Esercizi/Esercizio8/src/lib/lib.rs"

[[test]]
name = "Esercizio8"
path = "tests/test.rs"